first app completed

--- a/01-portfolio/Views/Home/Index.cshtml
+++ b/01-portfolio/Views/Home/Index.cshtml
@@ -8,4 +8,4 @@
 
 <partial name="_Skills" />
 
-@* <partial name="" model="Model.Projects" /> *@
+<partial name="_Projects" model="Model.Projects" />
