--- a/01-portfolio/Views/Home/_Skills.cshtml
+++ b/01-portfolio/Views/Home/_Skills.cshtml
@@ -47,7 +47,7 @@
                 React, Angular, Blazor
             </p>
 
-            <p class="text-primary cabecera">
+            <p class="text-primary header">
                 Experience:
             </p>
 
